Add wallets to try discovery page
